--- a/README.rdoc
+++ b/README.rdoc
@@ -3,20 +3,19 @@
 == Description
 
 We have a CSV (Comma Separated Values) file of N-rows for the following Objects
+ObjectA: {property1, property2, property3}
+ObjectB: {property1, property2, property3}
+.
+..
+...
 
-	ObjectA: {property1, property2, property3}
-	ObjectB: {property1, property2, property3}
-	.
-	..
-	...
-
-	object_id | object_type | timestamp | object_changes
-	:-------: | :---------: | :--------: | :------------
-	 1        |  ObjectA    |  412351252 | {property1: "value1", property3: "value2"}
-	 1        |  ObjectB    |  456662343 | {property1: “another value1"}
-	 1        |  ObjectA    |  467765765 | {property1: "altered value1", property2: “random value2"}
-	 2        |  ObjectA    |  451232123 | {property2: “some value2"}
-	...       |  ...        |  ...       | ...
+object_id | object_type | timestamp | object_changes
+:-------: | :---------: | :--------: | :------------
+ 1        |  ObjectA    |  412351252 | {property1: "value1", property3: "value2"}
+ 1        |  ObjectB    |  456662343 | {property1: “another value1"}
+ 1        |  ObjectA    |  467765765 | {property1: "altered value1", property2: “random value2"}
+ 2        |  ObjectA    |  451232123 | {property2: “some value2"}
+...       |  ...        |  ...       | ...
 
 
 The CSV columns are:
@@ -43,7 +42,7 @@ For simplicity, assume a moderate number of classes/type (no more than 3) and mo
 * Configuration
 Mongoid configuration can be done through a mongoid.yml that specifies your options and clients. The simplest configuration is as follows, which sets the default client to “localhost:27017” and provides a single database in that client named “mongoid”.
 
-	development:
+  development:
 	  clients:
 	    default:
 	      database: mongoid
@@ -85,7 +84,7 @@ Note that the deployed environment I am using is Heroku's free-tier which only h
 
 then on your mongoid.yml:
 
-	production:
+  production:
 	  clients:
 	    default:
 	     # The standard MongoDB connection URI allows for easy
@@ -101,3 +100,8 @@ then on your mongoid.yml:
 	       # in most operating environments.
 	       connect_timeout: 15
 
+* ...
+
+
+Please feel free to use a different markup language if you do not plan to run
+<tt>rake doc:app</tt>.
