--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == Object Properties Log Explorer Exercise
 
+{<img src="https://codeship.com/projects/79a077b0-13a6-0134-a614-3ee796d0dbce/status?branch=master" alt="Status?branch=master" />}[https://codeship.com/projects/157574]
+
 == Description
 
 We have a CSV (Comma Separated Values) file of N-rows for the following Objects:
