--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,8 @@
 
 {<img src="https://codeship.com/projects/79a077b0-13a6-0134-a614-3ee796d0dbce/status?branch=master" alt="Status?branch=master" />}[https://codeship.com/projects/157574]
 
+{<img src="https://api.codacy.com/project/badge/Grade/f2274423890542a08a09171256880c3f" alt="Codacy code quality" />}[https://www.codacy.com/app/raven_2/datatable-exercise?utm_source=github.com&utm_medium=referral&utm_content=coderaven/datatable-exercise&utm_campaign=Badge_Grade]
+
 {Heroku Deployed: Live Demo}[https://tradegecko-exercise.herokuapp.com/]
 
 == Description
