--- a/README.rdoc
+++ b/README.rdoc
@@ -4,9 +4,12 @@
 
 {<img src="https://api.codacy.com/project/badge/Grade/f2274423890542a08a09171256880c3f" alt="Codacy code quality" />}[https://www.codacy.com/app/raven_2/datatable-exercise?utm_source=github.com&utm_medium=referral&utm_content=coderaven/datatable-exercise&utm_campaign=Badge_Grade]
 
-{Heroku Deployed: Live Demo}[https://tradegecko-exercise.herokuapp.com/]
+{Heroku Deployed: Live Demo (No Background Jobs)}[https://tradegecko-exercise.herokuapp.com/]
+{Heroku Staging: Live Demo (With SideKiq)}[https://pacific-bastion-80328.herokuapp.com/]
 
 == Description
+
+UPDATE: Added a sidekiq based background job to make the csv importing faster for bulky csv importing. (See parallel_processing branch)
 
 We have a CSV (Comma Separated Values) file of N-rows for the following Objects:
   ObjectA: {property1, property2, property3}
