--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,15 @@
 
 {<img src="https://api.codacy.com/project/badge/Grade/f2274423890542a08a09171256880c3f" alt="Codacy code quality" />}[https://www.codacy.com/app/raven_2/datatable-exercise?utm_source=github.com&utm_medium=referral&utm_content=coderaven/datatable-exercise&utm_campaign=Badge_Grade]
 
-{Heroku Deployed: Live Demo}[https://tradegecko-exercise.herokuapp.com/]
+{Heroku Master (No background job): Live Demo}[https://tradegecko-exercise.herokuapp.com/]
+
+{Heroku Staging (W/ background job): Live Demo}[https://pacific-bastion-80328.herokuapp.com/]
+
+== Heroku Staging : You are in Parallel Processing (Background Jobs) Branch
+Install redis and start in the terminal:
+  redis-server
+
+  bundle exec sidekiq
 
 == Description
 
