--- a/README.rdoc
+++ b/README.rdoc
@@ -5,11 +5,20 @@
 {<img src="https://api.codacy.com/project/badge/Grade/f2274423890542a08a09171256880c3f" alt="Codacy code quality" />}[https://www.codacy.com/app/raven_2/datatable-exercise?utm_source=github.com&utm_medium=referral&utm_content=coderaven/datatable-exercise&utm_campaign=Badge_Grade]
 
 {Heroku Deployed: Live Demo (No Background Jobs)}[https://tradegecko-exercise.herokuapp.com/]
-{Heroku Staging: Live Demo (With SideKiq)}[https://pacific-bastion-80328.herokuapp.com/]
+
+{Heroku Staging: Live Demo (With SideKiq or Parallel Jobs - Faster on Heroku)}[https://pacific-bastion-80328.herokuapp.com/]
+
+== There's a Parallel Branch
+
+UPDATE: Added a sidekiq based background job to make the csv importing faster for bulky csv importing. (See {parallel_processing branch}[https://github.com/coderaven/datatable-exercise/tree/parallel_processing])
+
+The parallel branch involves usage of SideKiq for Job queueing, Google Drive for S3 Substitute on uploading files and handling them later
+
+The process:
+
+Upload -> Saved to GDrive (public folder) -> SideKiq queues a File Open to GDrive Path -> From File Open Parsing Sidekiq queues each processing of row of csv to ensure only valid data is recorded in the database.
 
 == Description
-
-UPDATE: Added a sidekiq based background job to make the csv importing faster for bulky csv importing. (See parallel_processing branch)
 
 We have a CSV (Comma Separated Values) file of N-rows for the following Objects:
   ObjectA: {property1, property2, property3}
